--- a/Index.html
+++ b/Index.html
@@ -31,5 +31,6 @@
     <hr />
     <a href="./Containers.html">Ir para a página de Containers</a>
     <a href="./Lista.html">Ir para a página de listas</a>
+    <a href="./tabelas.html">ir para a página de tabelas</a>
 </body>
 </html>
