Adicionando imagem audio e video

--- a/midia.html
+++ b/midia.html
@@ -6,6 +6,8 @@
     <title>Midia</title>
 </head>
 <body>
-    <img src="./media/imagem.jpg" />
+    <img src="./imagem.jpg.webp" alt="Um emote dos Kindred" />
+    <audio controls src="./WhatsApp Ptt 2023-10-03 at 12.08.45.ogg"></audio>
+    <video controls src="./WhatsApp Video 2023-09-28 at 05.44.56.mp4"></video>
 </body>
 </html>
